--- a/ProgramManager/Properties/Resources.resx
+++ b/ProgramManager/Properties/Resources.resx
@@ -61,45 +61,45 @@
     -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:element name="root" msdata:IsDataSet="true">
-      <xsd:complexType>
+      <xsd:complexTypes>
         <xsd:choice maxOccurs="unbounded">
           <xsd:element name="metadata">
-            <xsd:complexType>
+            <xsd:complexTypes>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+                <xsd:element name="value" types="xsd:string" minOccurs="0" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" />
-              <xsd:attribute name="type" type="xsd:string" />
-              <xsd:attribute name="mimetype" type="xsd:string" />
-            </xsd:complexType>
+              <xsd:attribute name="name" types="xsd:string" />
+              <xsd:attribute name="types" types="xsd:string" />
+              <xsd:attribute name="mimetypes" types="xsd:string" />
+            </xsd:complexTypes>
           </xsd:element>
           <xsd:element name="assembly">
-            <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string" />
-              <xsd:attribute name="name" type="xsd:string" />
-            </xsd:complexType>
+            <xsd:complexTypes>
+              <xsd:attribute name="alias" types="xsd:string" />
+              <xsd:attribute name="name" types="xsd:string" />
+            </xsd:complexTypes>
           </xsd:element>
           <xsd:element name="data">
-            <xsd:complexType>
+            <xsd:complexTypes>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+                <xsd:element name="value" types="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" types="xsd:string" minOccurs="0" msdata:Ordinal="2" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-            </xsd:complexType>
+              <xsd:attribute name="name" types="xsd:string" msdata:Ordinal="1" />
+              <xsd:attribute name="types" types="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetypes" types="xsd:string" msdata:Ordinal="4" />
+            </xsd:complexTypes>
           </xsd:element>
           <xsd:element name="resheader">
-            <xsd:complexType>
+            <xsd:complexTypes>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="value" types="xsd:string" minOccurs="0" msdata:Ordinal="1" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" />
-            </xsd:complexType>
+              <xsd:attribute name="name" types="xsd:string" use="required" />
+            </xsd:complexTypes>
           </xsd:element>
         </xsd:choice>
-      </xsd:complexType>
+      </xsd:complexTypes>
     </xsd:element>
   </xsd:schema>
   <resheader name="resmimetype">
